@@ -709,7 +709,8 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 Mandrake 9.1 users should install the <tt>libguile12-devel</tt> along
 with the <tt>libguile12</tt> package.
 
-
-<p><i>
-<p align=right>Last Modified $Date$</p>
-</i></p>
+<p>
+  <i>
+    <p align=right>Last Modified $Date$</p>
+  </i>
+</p>
