@@ -1,12 +1,3 @@
-<!--
-    Translation of CVS $Revision$
-    
-    Translators must leave this comment in tact, but remove any dollar
-    signs ($) from the CVS Revision indicator.
-
-    When revising a translation, copy the CVS Revision number from the
-    original source file.  !-->
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
   <HTML lang="@ISO_LANG@">
   <!-- Generated from @FILE_NAME@
