@@ -1,3 +1,8 @@
+2005-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile (apache-1.3.x-fixup): New target.
+	(all): Use it.
+
 2005-05-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/index.html (href): opps, fink is at 2.5.23
